[project]
name = "cachyDB"
version = "0.1.0"
description = "Educational database engine implemented in Python."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Ertan Tunç Türk", email = "turke@mef.edu.tr" }
]
dependencies = [
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "debugpy>=1.8.21",
    "hatchling>=1.30.1",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "NPY",
    "FURB",
]

ignore = ["E501", "UP035", "TC001", "SIM117", "UP028"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = [
    "tests"
]

[tool.ty.environment]
python = "./.venv"

[tool.ty.rules]
unresolved-import = "warn"
